# crucible

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  embedresource.cpp  launch.vs.json
docs/: Doxyfile  main.dox
editor/: EditorContext.cpp  EditorContext.hpp  GuiMain.cpp  GuiMain.hpp  HeirarchyPanel.cpp  HeirarchyPanel.hpp  Panel.cpp  Panel.hpp  PrefabView.cpp  PrefabView.hpp  ProjectPanel.cpp  ProjectPanel.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  ScenePanel.cpp  ScenePanel.hpp  View.cpp  View.hpp  ViewportPanel.cpp  ViewportPanel.hpp  WorkspaceObject.cpp  WorkspaceObject.hpp  main.cpp  tinydir.h
examples/: 2dDemo.cpp  HelloWindowDemo.cpp  LightSources.cpp  LightSourcesDemo.cpp  NBodyDemo.cpp  NbodyDemo.cpp  SceneRendering.cpp  SceneRenderingDemo.cpp  SimplexNoise.hpp  SponzaDemo.cpp  TerrainDemo.cpp  VulkanDemo.cpp  demo.cpp
include/: stb_image.h
include/crucible/: AABB.hpp  Animation.hpp  AssimpFile.hpp  Bone.hpp  Camera.hpp  DebugRenderer.hpp  DirectionalLight.hpp  Font.hpp  Framebuffer.hpp  Frustum.hpp  GameObject.hpp  GuiRenderer.hpp  IBL.hpp  IRenderable.hpp  Input.hpp  InternalShaders.hpp  Material.hpp  Math.hpp  Mesh.hpp  MeshFactory.hpp  MeshImporter.hpp  Model.hpp  ParticleSystem.hpp  Path.hpp  PointLight.hpp  PostProcessing.hpp  PostProcessor.hpp  Primitives.hpp  Profiler.hpp  Renderer.hpp  Renderer2D.hpp  Resources.hpp  RigidBody.hpp  Scene.hpp  Shader.hpp  Stopwatch.hpp  Texture.hpp  Util.hpp  Window.hpp  crucible.hpp
lib/embed-resource/: CMakeLists.txt  embedresource.cpp
resources/: Character Running.fbx  ceramic.crmaterial  character-running.dae  character-running.fbx  checkerboard.crmaterial  dragon.mtl  environment.blend  environment.blend1  environment.fbx  generic.fsh  generic.vsh  gold.crmaterial  invert.glsl  plastic.crmaterial  player-running.fbx  points.fsh  points.vsh  rustediron.crmaterial  shaderball.fbx  skybox.fsh  skybox.vsh  test.crmaterial  wood.crmaterial
resources/Rifle/: Rifle.fbx  rifle-ascii.fbx  rifle.asset  rifle.crmodel  rifle.dae
resources/shaders/: glass.fsh  glass.vsh
resources/sponza/: sponza.mtl
src/: AABB.cpp  Animation.cpp  AssimpFile.cpp  Bone.cpp  Camera.cpp  DebugRenderer.cpp  DirectionalLight.cpp  Font.cpp  Framebuffer.cpp  Frustum.cpp  GameObject.cpp  GuiRenderer.cpp  IBL.cpp  Input.cpp  Material.cpp  Mesh.cpp  MeshFactory.cpp  Model.cpp  ParticleSystem.cpp  Path.cpp  PointLight.cpp  PostProcessing.cpp  PostProcessor.cpp  Primitives.cpp  Profiler.cpp  Renderer.cpp  Renderer2D.cpp  Resources.cpp  RigidBody.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Util.cpp  Window.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp  meshimporter.cpp
src/shaders/: cubemap.fsh  cubemap.vsh  deferred.glsl  deferred_ambient.glsl  deferred_directional.glsl  deferred_directional_shadow.glsl  deferred_point.glsl  fxaa.glsl  gaussianBlur.glsl  lighting.glsl  outline.fsh  outline.vsh  shadow.vsh  sprite.fsh  sprite.vsh  ssao.glsl  ssaoBlur.glsl  ssr.glsl  standard.vsh  test.glsl  tonemap.glsl
